updated ipynb file

--- a/Customer Segmentation.ipynb
+++ b/Customer Segmentation.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Data"
+    "## Import and Reshape Data"
    ]
   },
   {
@@ -700,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Basically do One Hot Encoding\n",
+    "#One Hot Encoding\n",
     "\n",
     "list_of_cols = ['location','week_day','time_of_day']\n",
     "\n",
@@ -1258,325 +1258,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>burger</th>\n",
-       "      <th>fries</th>\n",
-       "      <th>salad</th>\n",
-       "      <th>shake</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>evening</th>\n",
-       "      <th>late_night</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ticket_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0x4a72e9</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x8d79fc</th>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x6ab655</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x7c6441</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x22521b</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x2cfec2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x4ea503</th>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x4a1790</th>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x4b776a</th>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0x6d4764</th>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>70000 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           burger  fries  salad  shake    1    2    3    4    5    6    7  \\\n",
-       "ticket_id                                                                   \n",
-       "0x4a72e9      0.4   0.25    0.0    0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0   \n",
-       "0x8d79fc      0.2   0.25    0.2    0.2  1.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "0x6ab655      0.4   0.25    0.0    0.4  0.0  0.0  0.0  0.0  0.0  0.0  1.0   \n",
-       "0x7c6441      0.0   0.00    0.2    0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0   \n",
-       "0x22521b      0.4   0.75    0.4    0.2  0.0  0.0  0.0  0.0  0.0  1.0  0.0   \n",
-       "...           ...    ...    ...    ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "0x2cfec2      0.0   1.00    1.0    0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0   \n",
-       "0x4ea503      0.2   0.25    0.2    0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0   \n",
-       "0x4a1790      0.2   0.00    0.0    0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0   \n",
-       "0x4b776a      0.8   1.00    0.2    0.8  0.0  0.0  0.0  1.0  0.0  0.0  0.0   \n",
-       "0x6d4764      0.8   0.75    0.0    0.8  0.0  0.0  0.0  0.0  1.0  0.0  0.0   \n",
-       "\n",
-       "             8    9  afternoon  evening  late_night  \n",
-       "ticket_id                                            \n",
-       "0x4a72e9   0.0  0.0        0.0      0.0         1.0  \n",
-       "0x8d79fc   0.0  0.0        1.0      0.0         0.0  \n",
-       "0x6ab655   0.0  0.0        0.0      1.0         0.0  \n",
-       "0x7c6441   0.0  0.0        1.0      0.0         0.0  \n",
-       "0x22521b   0.0  0.0        1.0      0.0         0.0  \n",
-       "...        ...  ...        ...      ...         ...  \n",
-       "0x2cfec2   0.0  0.0        1.0      0.0         0.0  \n",
-       "0x4ea503   0.0  0.0        1.0      0.0         0.0  \n",
-       "0x4a1790   0.0  0.0        0.0      0.0         1.0  \n",
-       "0x4b776a   0.0  0.0        0.0      1.0         0.0  \n",
-       "0x6d4764   0.0  0.0        0.0      1.0         0.0  \n",
-       "\n",
-       "[70000 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_scaled"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 180,
    "metadata": {},
    "outputs": [
@@ -1905,14 +1586,12 @@
     }
    ],
    "source": [
-    "# Try with the standard scaler?\n",
+    "# Try with the standard scaler instead of Min-Max Scaler\n",
     "\n",
     "Std_Scale = preprocessing.StandardScaler()\n",
     "train_std_scaled = Std_Scale.fit_transform(train)\n",
     "\n",
-    "train_std_scaled = pd.DataFrame(train_std_scaled, columns = train.columns,index= train.index)\n",
-    "\n",
-    "train_std_scaled"
+    "train_std_scaled = pd.DataFrame(train_std_scaled, columns = train.columns,index= train.index)"
    ]
   },
   {
@@ -2102,7 +1781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \"Validation\""
+    "## Validation"
    ]
   },
   {
